--- a/src/Components/Button/Button.module.css
+++ b/src/Components/Button/Button.module.css
@@ -2,5 +2,9 @@
     display: inline-block;
     padding: 5px 10px;
     border-radius: 5px;
+}
 
+.active {
+    background-color: green;
+    color: white;
 }
